--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -26,6 +26,12 @@
 
     <!-- test dependencies -->
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-http-api</artifactId>
       <version>0.1</version>
