--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject-parent</artifactId>
-  <version>3.0-SNAPSHOT</version>
+  <version>3.0</version>
   <packaging>pom</packaging>
   <name>avaje inject parent</name>
   <description>parent pom for avaje inject library</description>
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje/avaje-inject.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>avaje-inject-parent-3.0</tag>
   </scm>
 
   <modules>
