--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java8-oss</artifactId>
-    <version>2.2</version>
+    <version>2.3</version>
   </parent>
 
   <groupId>io.avaje</groupId>
@@ -18,6 +18,10 @@
     <developerConnection>scm:git:git@github.com:avaje/avaje-inject.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+
+  <properties>
+    <nexus.staging.autoReleaseAfterClose>false</nexus.staging.autoReleaseAfterClose>
+  </properties>
 
   <modules>
     <module>inject</module>
