--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java8-oss</artifactId>
-    <version>2.3</version>
+    <version>3.1</version>
   </parent>
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject-parent</artifactId>
-  <version>3.1</version>
+  <version>3.2</version>
   <packaging>pom</packaging>
   <name>avaje inject parent</name>
   <description>parent pom for avaje inject library</description>
@@ -26,7 +26,7 @@
   <modules>
     <module>inject</module>
     <module>inject-generator</module>
-    <module>inject-test</module>
+<!--    <module>inject-test</module>-->
   </modules>
 </project>
 
