--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -14,9 +14,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>io.avaje</groupId>
+      <groupId>jakarta.inject</groupId>
       <artifactId>jakarta.inject-api</artifactId>
-      <version>1.0</version>
+      <version>2.0.1.RC1</version>
     </dependency>
 
     <dependency>
