--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -14,9 +14,9 @@
   <dependencies>
 
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
-      <version>1</version>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
+      <version>1.0.5</version>
     </dependency>
 
     <dependency>
