--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,22 @@
     <module>inject</module>
     <module>inject-generator</module>
     <module>inject-test</module>
-    <module>blackbox-test-inject</module>
   </modules>
+
+  <profiles>
+    <profile>
+      <id>release</id>
+    </profile>
+    <profile>
+      <id>default</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
+        <module>blackbox-test-inject</module>
+      </modules>
+    </profile>
+  </profiles>
+
 </project>
 
