--- a/.github/workflows/jdk-ea.yml
+++ b/.github/workflows/jdk-ea.yml
@@ -1,10 +1,10 @@
 
-name: JDK EA
+name: avaje-inject EA
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '39 6 * * 1,3,5'
+    - cron: '39 1 * * 1,3,5'
 
 jobs:
   build:
