--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.3.1</version>
+      <version>4.5.1</version>
       <optional>true</optional>
     </dependency>
 
@@ -42,9 +42,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.avaje.composite</groupId>
+      <groupId>org.avaje</groupId>
       <artifactId>logback</artifactId>
-      <version>1.1</version>
+      <version>1.0</version>
       <scope>test</scope>
     </dependency>
 
