#243 - Fix for ClassCastException with generic types
The core fix is with DBeanMap. In detail, when wiring mocks/spy
this part of DBeanMap additionally registers the mock
with the generic type (which is in the generated code).

Prior to this fix, this process was too loose and registered
the mock with other types like Model2 in the test case.

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject-parent</artifactId>
-  <version>8.10</version>
+  <version>8.11-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>avaje inject parent</name>
   <description>parent pom for avaje inject library</description>
