--- a/auto-requires-plugin/pom.xml
+++ b/auto-requires-plugin/pom.xml
@@ -24,7 +24,7 @@
 			<version>3.7.1</version>
 			<scope>provided</scope>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>io.avaje</groupId>
 			<artifactId>avaje-inject</artifactId>
@@ -53,7 +53,7 @@
 				<artifactId>maven-plugin-plugin</artifactId>
 				<version>3.7.1</version>
 				<configuration>
-					<goalPrefix>find-modules</goalPrefix>
+					<goalPrefix>load-spi</goalPrefix>
 				</configuration>
 			</plugin>
 		</plugins>
