--- a/blackbox-other/pom.xml
+++ b/blackbox-other/pom.xml
@@ -9,7 +9,7 @@
     <version>8.11</version>
   </parent>
 
-  <artifactId>backport-other</artifactId>
+  <artifactId>blackbox-other</artifactId>
 
   <dependencies>
     <dependency>
