--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -19,7 +19,7 @@
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject</artifactId>
       <version>8.12-RC4</version>
-      <!-- <optional>true</optional> -->
+     <optional>true</optional>
       <scope>provided</scope>
     </dependency>
 <dependency>
