--- a/blackbox-test-inject/pom.xml
+++ b/blackbox-test-inject/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>blackbox-test-inject</artifactId>
 
   <properties>
-    <java.version>11</java.version>
+    <maven.compiler.release>11</maven.compiler.release>
   </properties>
 
   <dependencies>
@@ -90,7 +90,7 @@
 			<plugin>
 				<groupId>io.avaje</groupId>
 				<artifactId>avaje-inject-maven-plugin</artifactId>
-				<version>10.0-RC1</version>
+				<version>10.0-RC2</version>
 				<executions>
 					<execution>
 						<phase>process-sources</phase>
