--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -22,6 +22,12 @@
       <artifactId>avaje-inject</artifactId>
       <version>${project.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-spi-service</artifactId>
+      <version>1.7</version>
+    </dependency>
 
     <dependency>
       <groupId>io.avaje</groupId>
