--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -36,7 +36,12 @@
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
-
+    
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-spi-service</artifactId>
+      <version>1.8</version>
+    </dependency>
     <!-- test dependencies -->
     <dependency>
       <groupId>io.avaje</groupId>
