--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java_version: [11,17,21,GA]
+        java_version: [11,17,21]
         os: [ubuntu-latest]
 
     steps:
