--- a/pom.xml
+++ b/pom.xml
@@ -46,4 +46,18 @@
     </profile>
   </profiles>
 
+  <dependencies>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>1.14.17</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy-agent</artifactId>
+      <version>1.14.17</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
