--- a/pom.xml
+++ b/pom.xml
@@ -59,5 +59,11 @@
       <version>1.14.17</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.12.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
