--- a/blackbox-test-inject/pom.xml
+++ b/blackbox-test-inject/pom.xml
@@ -14,6 +14,7 @@
 
   <properties>
     <maven.compiler.release>11</maven.compiler.release>
+    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
   </properties>
 
   <dependencies>
