--- a/blackbox-aspect/pom.xml
+++ b/blackbox-aspect/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>avaje-inject-parent</artifactId>
     <groupId>io.avaje</groupId>
-    <version>10.0-RC5</version>
+    <version>10.0-RC6</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -34,5 +34,15 @@
     </dependency>
 
   </dependencies>
+<build>
+    <plugins>
+      <!-- Create the Runnable Jar with dependencies -->
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
