--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.avaje</groupId>
     <artifactId>avaje-inject-parent</artifactId>
-    <version>10.0-RC5</version>
+    <version>10.0-RC6</version>
   </parent>
 
   <artifactId>avaje-inject</artifactId>
@@ -49,6 +49,12 @@
       <artifactId>mockito-core</artifactId>
       <version>5.12.0</version>
       <optional>true</optional>
+    </dependency>
+    
+     <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject-events</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <!-- test dependencies -->
