--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject-parent</artifactId>
-  <version>10.0-RC5</version>
+  <version>10.0-RC6</version>
   <packaging>pom</packaging>
   <name>avaje inject parent</name>
   <description>parent pom for avaje inject library</description>
-
+ 
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java11-oss</artifactId>
@@ -20,12 +20,14 @@
 
   <properties>
     <nexus.staging.autoReleaseAfterClose>true</nexus.staging.autoReleaseAfterClose>
+    <maven.compiler.proc>full</maven.compiler.proc>
   </properties>
 
   <modules>
     <module>inject</module>
     <module>inject-generator</module>
     <module>inject-test</module>
+    <module>avaje-inject-events</module>
   </modules>
 
   <profiles>
