--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -22,7 +22,19 @@
       <artifactId>avaje-inject</artifactId>
       <version>${project.version}</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject-aop</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject-events</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-spi-service</artifactId>
@@ -36,7 +48,7 @@
       <optional>true</optional>
       <scope>provided</scope>
     </dependency>
-    
+
     <!-- test dependencies -->
     <dependency>
       <groupId>io.avaje</groupId>
